fixing xp usage